--- a/tcslackbuildnotifier-web-ui/pom.xml
+++ b/tcslackbuildnotifier-web-ui/pom.xml
@@ -80,8 +80,8 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>1.6</source>
-                    <target>1.6</target>
+                    <source>1.8</source>
+                    <target>1.8</target>
                 </configuration>
             </plugin>
             <plugin>
@@ -144,6 +144,13 @@
         </plugins>
     </build>
 
+    <repositories>
+        <repository>
+            <id>jetbrains-all</id>
+            <url>http://download.jetbrains.com/teamcity-repository</url>
+        </repository>
+    </repositories>
+
     <dependencies>
         <dependency>
             <groupId>petegoo.teamcity.plugins.tcslacknotifications</groupId>
@@ -169,9 +176,9 @@
 
         <!-- TeamCity/webapps/WEB-INF/lib/server-api.jar -->
         <dependency>
-            <groupId>com.jetbrains.teamcity</groupId>
+            <groupId>org.jetbrains.teamcity</groupId>
             <artifactId>server-api</artifactId>
-            <version>8.0.0</version>
+            <version>2017.1.1</version>
             <scope>provided</scope>
         </dependency>
 
@@ -192,9 +199,9 @@
 
         <!-- TeamCity/webapps/WEB-INF/lib/common-api.jar -->
         <dependency>
-            <groupId>com.jetbrains.teamcity</groupId>
+            <groupId>org.jetbrains.teamcity</groupId>
             <artifactId>common-api</artifactId>
-            <version>8.0.0</version>
+            <version>2017.1.1</version>
             <scope>provided</scope>
         </dependency>
 
